# TOEInstaller

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yaml
src/: main.rs
