[package]
name = "toe-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "toe_installer"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0.66"
steamlocate = "1.0.2"
eframe = "0.19.0"

[dependencies.ureq]
version = "2.5.0"
features = ["json"]

[dependencies.zip]
version = "0.6.3"
default-features = false
features = ["deflate"]
